[project]
name = "hola"
version = "0.1.0"
description = "HomeLab split-access proxy manager for Cloudflare Tunnel, Caddy, and AdGuard Home."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Hanako" }]
license = "MIT"
keywords = ["homelab", "cloudflare", "caddy", "adguard", "fastapi"]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "PyYAML>=6.0.2",
  "httpx>=0.27.0",
  "cryptography>=43.0.0",
  "python-multipart>=0.0.9",
]

[project.urls]
Homepage = "https://hanako.me"
Repository = "https://github.com/hanakokoizumi/hola"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "respx>=0.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hola"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
